[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=1]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/characters/other/paris2.png" type="Texture" id=4]
[ext_resource path="res://sprites/Act1settings/sceneten/jail.png" type="Texture" id=5]
[ext_resource path="res://sprites/characters/other/paris1.png" type="Texture" id=6]
[ext_resource path="res://act3/jailscenes/jail2.gd" type="Script" id=7]
[ext_resource path="res://sprites/UI/continuesprite copy.png" type="Texture" id=8]
[ext_resource path="res://sprites/UI/dialoguebox copy.png" type="Texture" id=9]
[ext_resource path="res://act3/jailscenes/paris2.gd" type="Script" id=10]
[ext_resource path="res://act3/jailscenes/dialoguebox2.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 94.6934, 1300.69 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2085.6, 117.683 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 359.53, 406.738 )

[sub_resource type="DynamicFont" id=7]
size = 100
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=8]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 2642.84, -0.25, 0, 0.25, 0, 2642.84, -0.25, 0, 0.25, 0, 2642.84, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1530.1, -0.25, 0, 0.25, 0, 1600, -0.25, 0, 0.25, 0, 1530.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1910.38, 1081.58 )
scale = Vector2( 1.01002, 1.03117 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 2589.41
margin_top = 1005.36
margin_right = 3369.41
margin_bottom = 1232.36
custom_fonts/font = SubResource( 1 )
text = "Remember (space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -9.61792, 1019.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3895.26, 971.41 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1893.7, 2134.75 )
shape = SubResource( 3 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 2446.8, 1622.63 )

[node name="paris" type="Area2D" parent="."]
position = Vector2( 6.83765, 20.5129 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="paris"]
margin_left = 2720.29
margin_top = 912.835
margin_right = 3190.29
margin_bottom = 1012.84
custom_fonts/font = SubResource( 4 )
text = "Talk (space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="paris"]
position = Vector2( 2931.39, 1554.19 )
scale = Vector2( 1.15984, 1.11988 )
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="paris"]
position = Vector2( 2802.33, 1700.74 )
shape = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1933.15, 1070.25 )
scale = Vector2( 0.509515, 1.00294 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="dialoguebox" type="Control" parent="."]
margin_left = -487.171
margin_top = -1235.33
margin_right = -447.171
margin_bottom = -1195.33
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="dialoguebox"]
modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
margin_left = 1102.0
margin_top = 1527.0
margin_right = 3669.0
margin_bottom = 2066.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="dialoguebox"]
margin_left = 1270.0
margin_top = 1633.0
margin_right = 3473.0
margin_bottom = 1955.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuesprite" type="Sprite" parent="dialoguebox"]
position = Vector2( 2642.84, 1600 )
scale = Vector2( 1.31444, 1.92604 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 8 )

[node name="Tween" type="Tween" parent="dialoguebox"]

[node name="Type" type="AudioStreamPlayer" parent="dialoguebox"]
[connection signal="body_entered" from="paris" to="paris" method="_on_paris_body_entered"]
[connection signal="body_entered" from="paris" to="dialoguebox" method="_on_paris_body_entered"]
[connection signal="body_exited" from="paris" to="paris" method="_on_paris_body_exited"]
[connection signal="body_exited" from="paris" to="dialoguebox" method="_on_paris_body_exited"]
[connection signal="tree_exited" from="dialoguebox" to="." method="_on_dialoguebox_tree_exited"]
[connection signal="tween_completed" from="dialoguebox/Tween" to="dialoguebox" method="_on_Tween_tween_completed"]
